apps/twindemo/wetty/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wetty
  namespace: default
  labels:
    app: wetty
  annotations:
    resource.twingate.com: "true"
    resource.twingate.com/name: "Demo · Web SSH"
    resource.twingate.com/alias: "wetty.octolet.int"
spec:
  selector:
    app: wetty
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
